--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="grocery" title="Door Hardwear & Lock">
                 <img src="nine.jpg">
-                <h5>Door Hardwear & Lock </h5>
+                <h5>Door Hardwear </h5>
             </div>
             <div class="grocery " title="Smart Wathes">
                 <img src="eleven.jpg">
